<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item android:title="@string/drawer_header_music">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/music_vietnam"
                        android:checked="true"
                        android:icon="@drawable/ic_one"
                        android:title="@string/drawer_vietnam_music" />

                    <item
                        android:id="@+id/music_korea"
                        android:icon="@drawable/ic_two"
                        android:title="@string/drawer_korea_music" />
                    <item
                        android:id="@+id/music_us_uk"
                        android:icon="@drawable/ic_three"
                        android:title="@string/drawer_us_uk_music" />

                    <item
                        android:id="@+id/music_video"
                        android:icon="@drawable/ic_music_video_black_24dp"
                        android:title="@string/drawer_video" />
                </group>
            </menu>
        </item>
        <item android:title="@string/drawer_header_of_me">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/music_favorite"
                        android:icon="@drawable/ic_stars_black_24dp"
                        android:title="@string/drawer_favorite"
                        app:actionLayout="@layout/include_menu_counter" />

                    <item
                        android:id="@+id/music_offline"
                        android:icon="@drawable/ic_library_music_black_24dp"
                        android:title="@string/drawer_offline" />

                    <item
                        android:id="@+id/music_setting"
                        android:icon="@drawable/icon_settings"
                        android:title="@string/drawer_settings" />

                </group>
            </menu>

        </item>


    </group>

</menu>