<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/md_styled_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/md_styled_dialog_header"
        android:background="@drawable/header_dialog_download"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/md_styled_dialog_pic"
            android:layout_width="@dimen/md_styled_pic_size"
            android:layout_height="@dimen/md_styled_pic_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:weightSum="3">

        <com.tadev.musicplayer.supports.design.TextViewTitle
            android:id="@+id/md_styled_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:gravity="center_horizontal"
            android:text="@string/dialog_title_download"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/md_styled_text_title"
            android:textStyle="bold" />


        <!--<FrameLayout-->
        <!--android:id="@+id/md_styled_dialog_custom_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"></FrameLayout>-->


        <LinearLayout
            android:id="@+id/lrlContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/fragment_dialog_download_rdgDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="3dp">

                <RadioButton
                    android:id="@+id/fragment_dialog_download_rdb128"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdb_128" />

                <RadioButton
                    android:id="@+id/fragment_dialog_download_rdb320"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdb_320" />

                <RadioButton
                    android:id="@+id/fragment_dialog_download_rdb500"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdb_500" />

                <RadioButton
                    android:id="@+id/fragment_dialog_download_rdb1000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rdb_1000" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="5dp"
                android:alpha="0.3"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_dialog_download_txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/music_name"
                        android:textColor="@color/material_red_500"
                        android:textSize="@dimen/text_title_size" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingBottom="10dp">

                            <TextView
                                android:id="@+id/fragment_dialog_download_txt128Size"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt128FileSize" />

                            <TextView
                                android:id="@+id/fragment_dialog_download_txt320Size"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt320FileSize" />

                            <TextView
                                android:id="@+id/fragment_dialog_download_txtM4aSize"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt500FileSize" />

                            <TextView
                                android:id="@+id/fragment_dialog_download_txtLlSize"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/txt1000FileSize" />
                        </LinearLayout>

                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.2"
                    android:gravity="right|end"
                    android:paddingRight="10dp">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/fragment_dialog_download_btnComfirm"
                        style="@style/Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:enabled="false"
                        android:textAllCaps="true"
                        android:text="@string/action_download_comfirm"
                        android:textColor="@color/material_pink_500" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/fragment_dialog_download_btnClose"
                        style="@style/Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/cancel_dialog"
                        android:textAllCaps="true"
                        android:textColor="@color/material_pink_500" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>