<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/frameThumbnail"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/shape_bg_white_rounded_rect">

            <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/item_card_video_imgThumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/bg_card_top_music_usuk"
                app:riv_corner_radius_bottom_left="0dp"
                app:riv_corner_radius_bottom_right="0dp"
                app:riv_corner_radius_top_left="@dimen/card_corner_radius"
                app:riv_corner_radius_top_right="@dimen/card_corner_radius" />


            <TextView
                android:id="@+id/item_card_video_txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#B3FFFFFF"
                android:gravity="center_horizontal"
                android:text="@string/music_name"
                android:textColor="@color/material_grey_700"
                android:textSize="@dimen/text_title_video"
                android:textStyle="bold" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/item_card_video_txtArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/music_singer"
                android:textColor="@color/material_grey_700"
                android:textSize="@dimen/text_artist_video" />

            <TextView
                android:id="@+id/item_card_video_txtBitrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_headset_black_18dp"
                android:drawablePadding="10dp"
                android:text="@string/video_rate"
                android:textColor="@color/material_red_500" />

            <TextView
                android:id="@+id/item_card_video_txtDownload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_download"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/music_download"
                android:textColor="@color/material_red_500" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>