<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lrl_ListItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">
        <include
            android:id="@+id/fragment_list_loading"
            layout="@layout/include_loading" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_list_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="gone" />

        <TextView
            android:id="@+id/fragment_list_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data_available"
            android:textColor="@color/material_grey_700"
            android:visibility="gone" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/fragment_list_viewShow"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="1"
        android:background="@color/material_lightBlue_500"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/fragment_list_txtCountChecked"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/delete_selected"
            android:textColor="@color/material_white"
            android:textSize="14dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/fragment_list_btnDel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:drawableLeft="@drawable/ic_delete_white_24dp"
            android:drawablePadding="-30dp"
            android:text="@string/favorite_delete"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>

