<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_big"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="@dimen/cardMarginHorizontal"
        android:layout_marginRight="@dimen/cardMarginHorizontal"
        android:layout_marginTop="@dimen/cardMarginVertical"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp"
        card_view:cardPreventCornerOverlap="false"
        card_view:contentPadding="1dp">

        <FrameLayout
            android:id="@+id/card_big"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_card_top_music_korea">

            <LinearLayout
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/frame_card_big_music"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0.65"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/list_item_card_big_tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:singleLine="true"
                        android:text="@string/music_name"
                        android:textColor="@color/material_black"
                        android:textSize="@dimen/text_title_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/list_item_card_big_tvSinger"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/music_singer"
                        android:textSize="@dimen/text_singer_size" />
                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/material_grey_700" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/list_item_card_big_tvDownloads"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/music_download" />

                    <TextView
                        android:id="@+id/list_item_card_big_tvMusicType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/music_type"
                        android:textColor="@color/material_red_500" />
                </LinearLayout>
            </LinearLayout>

        </FrameLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
